--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,11 @@
 		"psr-4": {
 			"Gaara\\Contracts\\": "src/"
 		}
+	},
+	"repositories": {
+		"packagist": {
+			"type": "composer",
+			"url": "https://packagist.phpcomposer.com"
+		}
 	}
 }
