--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
 			"type": "composer",
 			"url": "https://packagist.phpcomposer.com"
 		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "2.4-dev"
+		}
 	}
 }
